--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@changesets/cli": "^2.26.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.6.5",
+    "@commitlint/config-conventional": "^17.6.5",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.42.0",
     "eslint-config-custom": "workspace:*",
     "husky": "^8.0.3",
@@ -22,5 +26,10 @@
     "turbo": "^1.10.1",
     "typescript": "^5.1.3"
   },
-  "packageManager": "pnpm@7.15.0"
+  "packageManager": "pnpm@7.15.0",
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
