--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^8.42.0",
     "eslint-config-custom": "workspace:*",
     "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
     "syncpack": "^10.5.1",
     "turbo": "^1.10.1",
@@ -31,5 +32,11 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": [
+      "pnpm format",
+      "eslint"
+    ]
   }
 }
