--- a/apps/widget-builder/package.json
+++ b/apps/widget-builder/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.13.3",
     "@pinata/sdk": "^2.1.0",
     "@segment/analytics-next": "^1.52.0",
+    "@sentry/nextjs": "^7.54.0",
     "@superfluid-finance/tokenlist": "^1.0.2",
     "@superfluid-finance/widget": "workspace:*",
     "@web3modal/ethereum": "^2.4.2",
