--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     branches:
-      - **
+      - master
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
@@ -21,7 +21,7 @@ jobs:
           node-version: 16
 
       - name: Install Dependencies
-        run: yarn
+        run: pnpm install
 
       - name: Create Release Pull Request
         uses: changesets/action@v1
