--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Main
+name: Release
 on:
   workflow_dispatch:
   push:
@@ -19,6 +19,10 @@ jobs:
         with:
           fetch-depth: 0
           submodules: true
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
