--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-      issues: writeg
+      issues: write
       pull-requests: write
     timeout-minutes: 5
 
