--- a/turbo.json
+++ b/turbo.json
@@ -15,6 +15,7 @@
       "dependsOn": ["^build"],
       "outputs": [".next/**", "!.next/cache/**"],
       "env": [
+        "NEXT_PUBLIC_SENTRY_DSN",
         "NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID",
         "NEXT_PUBLIC_GOOGLE_FONTS_API_KEY",
         "NEXT_PUBLIC_EXPORT_BASE_URL",
@@ -27,6 +28,7 @@
       "dependsOn": ["^build"],
       "outputs": [".next/**", "!.next/cache/**"],
       "env": [
+        "NEXT_PUBLIC_SENTRY_DSN",
         "NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID",
         "NEXT_PUBLIC_SEGMENT_WRITE_KEY"
       ]
