--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -35,7 +35,7 @@
     "@mui/lab": "5.0.0-alpha.133",
     "@mui/utils": "^5.13.1",
     "@superfluid-finance/tokenlist": "^1.1.0",
-    "abitype": "^0.8.7",
+    "abitype": "^0.8.8",
     "blockies-ts": "^1.0.0",
     "immer": "^10.0.2",
     "lodash.memoize": "^4.1.2",
@@ -50,17 +50,17 @@
     "@hookform/devtools": "^4.3.1",
     "@mui/material": "^5.13.4",
     "@types/lodash.memoize": "^4.1.7",
-    "@types/react": "^18.2.9",
+    "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
     "@wagmi/cli": "1.1.0",
     "tsconfig": "workspace:*",
     "typedoc": "^0.24.8",
     "typescript": "^5.1.3",
-    "viem": "~1.0.0",
+    "viem": "~1.0.5",
     "wagmi": "^1.1.1"
   },
   "peerDependencies": {
-    "viem": "~0.3.35",
-    "wagmi": "^1.0.5"
+    "viem": "^1.0.0",
+    "wagmi": "^1.0.0"
   }
 }
