--- a/apps/widget-builder/package.json
+++ b/apps/widget-builder/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@superfluid-finance/widget-builder",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "build": "next build",
