--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "turbo run lint",
     "sort-package-jsons": "npx sort-package-json \"**/package.json\" \"!**/node_modules/**\" --check",
     "prepare": "husky install",
+    "changeset": "changeset",
     "changeset:release": "pnpm build && changeset publish",
     "changeset:version": "changeset version && pnpm install --lockfile-only"
   },
