--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
   "name": "superfluid-checkout",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "scripts": {
     "build": "turbo run build",
+    "changeset": "changeset",
+    "changeset:release": "pnpm build && changeset publish",
+    "changeset:version": "changeset version && pnpm install --lockfile-only",
+    "clean": "npm-run-all -p clean:*",
+    "clean:next": "rimraf --glob './**/.next'",
+    "clean:node-modules": "rimraf --glob '**/node_modules'",
+    "clean:out": "rimraf --glob './**/out'",
     "dev": "turbo run dev",
     "dev:main": "turbo run dev --filter=!./examples/*",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "lint": "turbo run lint",
-    "sort-package-jsons": "npx sort-package-json \"**/package.json\" \"!**/node_modules/**\" --check",
     "prepare": "husky install",
-    "changeset": "changeset",
-    "changeset:release": "pnpm build && changeset publish",
-    "changeset:version": "changeset version && pnpm install --lockfile-only"
+    "sort-package-jsons": "npx sort-package-json \"**/package.json\" \"!**/node_modules/**\" --check"
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": [
+      "pnpm format",
+      "eslint --fix"
+    ]
   },
   "dependencies": {
-    "@changesets/cli": "^2.26.1"
+    "@changesets/cli": "^2.26.1",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^5.0.1"
   },
   "devDependencies": {
     "eslint": "^8.42.0",
@@ -23,20 +35,8 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
-    "syncpack": "^10.5.1",
     "turbo": "^1.10.3",
     "typescript": "^5.1.3"
   },
-  "packageManager": "pnpm@8.6.1",
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "lint-staged": {
-    "*.{js,ts,tsx}": [
-      "pnpm format",
-      "eslint --fix"
-    ]
-  }
+  "packageManager": "pnpm@8.6.1"
 }
