--- a/apps/widget-builder/package.json
+++ b/apps/widget-builder/package.json
@@ -15,6 +15,7 @@
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^8.0.2",
+    "@monaco-editor/react": "^4.5.1",
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "5.0.0-alpha.133",
     "@mui/material": "^5.13.4",
