--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -6,12 +6,16 @@
   "type": "module",
   "exports": {
     ".": "./dist/index.js",
+    "./components": "./dist/components/index.js",
     "./webcomponent": "./dist/webcomponent/WebComponent.js"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "typesVersions": {
     "*": {
+      "components": [
+        "dist/components/index.d.ts"
+      ],
       "webcomponent": [
         "dist/webcomponent/WebComponent.d.ts"
       ]
