--- a/apps/hosted-widget/package.json
+++ b/apps/hosted-widget/package.json
@@ -27,7 +27,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "viem": "^1.0.0",
-    "wagmi": "^1.0.0"
+    "wagmi": "^1.0.0",
+    "zod": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
