--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     ]
   },
   "dependencies": {
-    "@changesets/cli": "^2.26.1",
+    "@changesets/cli": "^2.26.2",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.1"
   },
@@ -35,8 +35,13 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
-    "turbo": "^1.10.3",
+    "turbo": "^1.10.6",
     "typescript": "^5.1.3"
   },
-  "packageManager": "pnpm@8.6.1"
+  "packageManager": "pnpm@8.6.1",
+  "pnpm": {
+    "overrides": {
+      "react-hook-form": "7.44.3"
+    }
+  }
 }
