--- a/apps/widget-builder/package.json
+++ b/apps/widget-builder/package.json
@@ -21,18 +21,18 @@
     "@pinata/sdk": "^2.1.0",
     "@segment/analytics-next": "^1.53.0",
     "@sentry/nextjs": "^7.56.0",
-    "@superfluid-finance/tokenlist": "^1.1.0",
+    "@superfluid-finance/tokenlist": "^1.2.0",
     "@superfluid-finance/widget": "workspace:*",
-    "@web3modal/ethereum": "^2.6.0",
-    "@web3modal/react": "^2.6.0",
+    "@web3modal/ethereum": "^2.6.1",
+    "@web3modal/react": "^2.6.1",
     "clsx": "^1.2.1",
     "mui-color-input": "^1.1.0",
     "next": "^13.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.44.0",
-    "viem": "^1.1.8",
-    "wagmi": "^1.3.1",
+    "react-hook-form": "7.44.3",
+    "viem": "^1.2.1",
+    "wagmi": "^1.3.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -41,6 +41,6 @@
     "@types/react": "^18.2.14",
     "eslint": "^8.43.0",
     "eslint-config-next": "^13.4.7",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.5"
   }
 }
