--- a/examples/widget-vite-react-rainbowkit/package.json
+++ b/examples/widget-vite-react-rainbowkit/package.json
@@ -16,7 +16,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "viem": "^1.1.8",
-    "wagmi": "^1.3.1"
+    "wagmi": "^1.3.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
