--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -35,6 +35,7 @@
     "@mui/lab": "5.0.0-alpha.133",
     "@mui/utils": "^5.13.6",
     "@superfluid-finance/tokenlist": "^1.1.0",
+    "abitype": "^0.8.11",
     "blockies-ts": "^1.0.0",
     "immer": "^10.0.0",
     "lodash.memoize": "^4.1.0",
@@ -50,6 +51,7 @@
     "@types/lodash.memoize": "^4.1.7",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@superfluid-finance/ethereum-contracts": "^1.7.1",
     "@wagmi/cli": "^1.3.0",
     "tsconfig": "workspace:*",
     "typedoc": "^0.24.8",
