--- a/packages/widget/tsconfig.json
+++ b/packages/widget/tsconfig.json
@@ -8,6 +8,7 @@
     "module": "ESNext",
     "target": "ES2020",
     "outDir": "./dist",
-    "declaration": true
+    "declaration": true,
+    "resolveJsonModule": true
   }
 }
